Fix overflow issue on gists

--- a/irccloud-dark.css
+++ b/irccloud-dark.css
@@ -23,7 +23,7 @@
     filter: url("data:image/svg+xml;utf8, <svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'i\'><feColorMatrix color-interpolation-filters=\'srgb\' values=\'-1 0 0 0 1 0 -1 0 0 1 0 0 -1 0 1 0 0 0 1 0\'/></filter></svg>#i");
     -webkit-filter: invert(100%) !important;
   }
-  .gistwrap html {
+  body, html {
     overflow: hidden !important;
   }
   .mainContainer, table.buffer {
